--- a/Алфавит/Вариант 3/index.html
+++ b/Алфавит/Вариант 3/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 <head>
     <meta charset="utf-8">
@@ -33,3 +33,5 @@
 </body>
 </html>
 
+
+<!-- привет -->
